@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -170,7 +171,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>2.1.2</version>
-                <configuration />
+                <configuration/>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -191,11 +192,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.6</version>
+                <version>2.13</version>
                 <configuration>
                     <excludes>
                         <exclude>**/Test*.java</exclude>
                     </excludes>
+                    <argLine>-Xms768m -Xmx768m -XX:MaxPermSize=128m</argLine>
                 </configuration>
             </plugin>
 
@@ -217,17 +219,17 @@
                     </execution>
                 </executions>
             </plugin>
-			<!-- required for testing robolectric-sqlite -->
+            <!-- required for testing robolectric-sqlite -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.1</version>
                 <executions>
-                  <execution>
-                    <goals>
-                      <goal>test-jar</goal>
-                    </goals>
-                  </execution>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
 
@@ -266,8 +268,8 @@
                                 </goals>
                                 <configuration>
                                     <target>
-                                        <delete dir="${project.basedir}/lib/main" />
-                                        <mkdir dir="${project.basedir}/lib/main" />
+                                        <delete dir="${project.basedir}/lib/main"/>
+                                        <mkdir dir="${project.basedir}/lib/main"/>
                                     </target>
                                 </configuration>
                             </execution>
